# conan-fasttext

./: .gitignore
example/: conanfile.py
example/test-work/: conanfile.py
example/twitter-sentiment/: CMakeLists.txt  README.md  conanfile.py  tmp.html
example/twitter-sentiment/src/: CMakeLists.txt  main.cpp  rxcurl.cpp  rxcurl.h  tweet.cpp  tweet.h  twitter.cpp  twitter.h  utils.cpp  utils.h
example/twitter-sentiment/src/db/: database.cpp  database.h  tweet.cpp  tweet.h
fasttext/: CMakeLists.txt  conanfile.py
fasttext/test_package/: CMakeLists.txt  test_package.cpp
fasttext_data/: conanfile.py
fasttext_installer/: CMakeLists.txt  conanfile.py
fasttext_installer/test_package/: conanfile.py  data.txt
